@@ -19,8 +19,8 @@ package com.regnosys.rosetta.generator.java.types;
 import java.util.Collections;
 import java.util.List;
 
-import com.regnosys.rosetta.rosetta.simple.Data;
 import com.regnosys.rosetta.types.RDataType;
+import com.regnosys.rosetta.types.RType;
 import com.regnosys.rosetta.types.TypeSystem;
 import com.rosetta.model.lib.RosettaModelObject;
 import com.rosetta.util.DottedPath;
@@ -32,16 +32,18 @@ import com.rosetta.util.types.JavaTypeDeclaration;
 public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 	private static JavaClass<RosettaModelObject> ROSETTA_MODEL_OBJECT = JavaClass.from(RosettaModelObject.class);
 	
-	private final Data data;
-	private final DottedPath packageName;
+	private final RDataType data;
 	
 	private final TypeSystem typeSystem;
 
-	public RJavaPojoInterface(Data data, TypeSystem typeSystem) {
+	public RJavaPojoInterface(RDataType data, TypeSystem typeSystem) {
 		this.data = data;
-		this.packageName = DottedPath.splitOnDots(data.getModel().getName());
 		
 		this.typeSystem = typeSystem;
+	}
+	
+	public RDataType getRType() {
+		return data;
 	}
 
 	@Override
@@ -53,7 +55,7 @@ public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 			return true;
 		}
 		if (other instanceof RJavaPojoInterface) {
-			return typeSystem.isSubtypeOf(new RDataType(data), new RDataType(((RJavaPojoInterface)other).data));
+			return typeSystem.isSubtypeOf(data, ((RJavaPojoInterface)other).data);
 		}
 		return false;
 	}
@@ -75,10 +77,11 @@ public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 
 	@Override
 	public List<JavaClass<?>> getInterfaceDeclarations() {
-		if (data.getSuperType() == null) {
-			return List.of(ROSETTA_MODEL_OBJECT);
+		RType superType = typeSystem.stripFromTypeAliases(data.getSuperType());
+		if (superType != null && superType instanceof RDataType) {
+			return Collections.singletonList(new RJavaPojoInterface((RDataType) superType, typeSystem));
 		}
-		return Collections.singletonList(new RJavaPojoInterface(data.getSuperType(), typeSystem));
+		return List.of(ROSETTA_MODEL_OBJECT);
 	}
 	
 	@Override
@@ -106,7 +109,7 @@ public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 
 	@Override
 	public DottedPath getPackageName() {
-		return packageName;
+		return data.getNamespace();
 	}
 
 }
